Fix alignment

--- a/resources/assets/less/bem/beatmap-score-top.less
+++ b/resources/assets/less/bem/beatmap-score-top.less
@@ -176,6 +176,7 @@
     &--right {
       flex-wrap: wrap;
       justify-content: flex-end;
+      align-items: flex-start;
       width: 100%; // 'cuz ie is a poop
 
       @media @mobile {
